--- a/indice.html
+++ b/indice.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
-    <link rel="stylesheet" href="stilos.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
